@startuml
hide empty members

set separator none
package ska_tmc_cdm.messages.central_node {
    package assign_resources.py <<Rectangle>> {
        class DishAllocation {
            receptor_ids : List[str]
        }

        class ApertureConfiguration {
            station_id: int
            aperture_id: str
        }

        class SubArrayBeamsConfiguration {
            subarray_beam_id: int
            apertures: list[ApertureConfiguration]
            number_of_channels: int
        }

        class MCCSAllocate {
            station_ids: Optional[List[List[int]]]
            channel_blocks: Optional[List[int]]
            subarray_beam_ids: Optional[List[int]]
            interface: Optional[str]
            subarray_beams: Optional[list[SubArrayBeamsConfiguration]]
        }

        class Channel {
            count: int
            start: int
            stride: int
            freq_min : float
            freq_max : float
            link_map : List[List[int]]
            spectral_window_id : str
        }

        class ScanType {
            st_id : str
            reference_frame : str
            ra : str
            dec : str
        }
        ScanType *-- "*" Channel

        class PbDependency {
            pb_id : str
            kind : List[str]
        }


        class PhaseDir {
            ra: List,
            dec: List, 
            reference_time: str, 
            reference_frame: str
        }
        class BeamConfiguration {
            beam_id: str,
            function: str,
            search_beam_id: int,
            timing_beam_id: int,
            vlbi_beam_id: int,
        }
        class ChannelConfiguration {
            channels_id: str,
            spectral_windows:List[Channel] 
        }
        ChannelConfiguration  *-- "*" Channel

        class PolarisationConfiguration {
            polarisations_id: str,
            corr_type: List[str]  
        }
        class EBScanTypeBeam {
            field_id: str,
            channels_id: str,
            polarisations_id: str, 
        }
        class EBScanType {
            scan_type_id: str,
            beams: Dict[str,EBScanTypeBeam],
            derive_from: str, 
        }
        EBScanType  *-- "1" EBScanTypeBeam

        class FieldConfiguration {
            field_id : str
            pointing_fqdn : str,
            phase_dir : PhaseDir
        }

        FieldConfiguration  *-- "1" PhaseDir

        class SDPWorkflow {
            name : str
            kind : str
            version : str
        }
        
        class ScriptConfiguration {
            name : str
            kind : str
            version : str
        }

        class ProcessingBlockConfiguration {
            pb_id : str
            parameters : Dict,
            dependencies: List[PbDependency],
            sbi_ids : List,
            workflow : SDPWorkflow,
            script : ScriptConfiguration
        }
        ProcessingBlockConfiguration  *-- "1" SDPWorkflow
        ProcessingBlockConfiguration  *-- "*" PbDependency
        ProcessingBlockConfiguration  *-- "1" ScriptConfiguration

        class ExecutionBlockConfiguration {
            eb_id: str,
            max_length: int,
            context: Dict,
            beams: List[BeamConfiguration],
            channels: List[ChannelConfiguration],
            polarisations: List[PolarisationConfiguration],
            fields: List[FieldConfiguration],
            scan_types: List[EBScanType],
        }

        ExecutionBlockConfiguration  *-- "*" BeamConfiguration
        ExecutionBlockConfiguration  *-- "*" ChannelConfiguration
        ExecutionBlockConfiguration  *-- "*" PolarisationConfiguration
        ExecutionBlockConfiguration  *-- "*" FieldConfiguration
        ExecutionBlockConfiguration  *-- "*" EBScanType


        class SDPConfiguration {
            eb_id : str
            max_length : float
            resources : Dict
            interface : str
        }
        SDPConfiguration *-- "*" ScanType
        SDPConfiguration *-- "*" ProcessingBlockConfiguration
        SDPConfiguration *-- "1" ExecutionBlockConfiguration

        class PSSConfiguration{
            pss_beam_ids: List[int]
        }

        class PSTConfiguration{
            pst_beam_ids: List[int]
        }

        class CSPConfiguration {
            pss : PSSConfiguration
            pst : PSTConfiguration
        }
        CSPConfiguration *-- "1" PSSConfiguration
        CSPConfiguration *-- "1" PSTConfiguration

     
        class AssignResourcesRequest {
            interface : str
            transaction_id : str
            subarray_id : int
        }

        AssignResourcesRequest *-- "1" DishAllocation
        AssignResourcesRequest *-- "1" MCCSAllocate
        MCCSAllocate *-- "1" SubArrayBeamsConfiguration
        SubArrayBeamsConfiguration *-- "1" ApertureConfiguration
        AssignResourcesRequest *-- "1" SDPConfiguration
        AssignResourcesRequest *-- "1" CSPConfiguration

        class AssignResourcesResponse
        AssignResourcesResponse *-- "1" DishAllocation
	}
}
@enduml